<resources>
    <string name="app_name">Setaman</string>
    <string name="bergabung_ke_florist">Mari Bergabung ke Setaman\!</string>
    <string name="phone_number">Nomor HP</string>
    <string name="hint_phone_number">81234567890</string>
    <string name="atau_daftar_menggunakan">Atau daftar menggunakan</string>
    <string name="daftar_menggunakan_google">Daftar menggunakan Google</string>
    <string name="login">Masuk</string>
    <string name="terms_condition">Syarat dan Ketentuan</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="name_hint">Nama lengkap anda</string>
    <string name="email_hint">nama123@email.id</string>
    <string name="male">Laki - laki</string>
    <string name="make_password">Buat kata sandi</string>
    <string name="hint_make_password">Buat kata sandi</string>
    <string name="confirm_password">Konfirmasi kata sandi</string>
    <string name="hint_confirm_password">Konfirmasi kata sandi</string>
    <string name="verif_code">Verifikasi kode OTP</string>
    <string name="verif_code_detail">Pilih salah satu cara di bawah ini untuk\nmendapatkan kode OTP</string>
    <string name="kirim_melalui_sms">Kirim melalui SMS</string>
    <string name="supporting_text">Supporting text</string>
    <string name="kirim_melalui_whatsapp">Kirim melalui WhatsApp</string>
    <string name="hint_whatsapp">+6281234567890</string>
    <string name="masukkkan_kode">Masukkan kode OTP yang Anda terima melalui</string>
    <string name="sms">SMS\u0020</string>
    <string name="di">di\u0020</string>
    <string name="nomor_salah">Nomor salah ?\u0020</string>
    <string name="ubah"> Ubah</string>
    <string name="ubah1">Ubah</string>
    <string name="countdowntimer">00:00</string>
    <string name="lupa_kata_sandi">Lupa kata sandi anda\?</string>
    <string name="masukkan_email">Masukkan email yang terdaftar pada akun Florist\nuntuk mengatur ulang kata sandi anda</string>
    <string name="kirim_email">Kirim Email </string>
    <string name="reset_kata_sandi">Reset Kata Sandi</string>
    <string name="pastikan_password">Pastikan kata sandi tidak mudah ditebak dan\nberbeda dengan kata sandi di akun lain</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_success">LOGIN SUCCESS</string>
    <string name="kirim_ulang_kode">Kirim ulang kode</string>
    <string name="masuk_ke_akun_florist">Masuk ke akun Florist</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?\u0020</string>
    <string name="mandatory">*</string>
    <string name="kata_sandi">Kata sandi</string>
    <string name="email_nomor_hp">Email \/ Nomor HP</string>
    <string name="sembunyikan">Sembunyikan</string>
    <string name="lihat">Lihat</string>
    <string name="daftar">Daftar</string>
    <string name="lanjut">Lanjut</string>
    <string name="saya_setuju_dengan">Saya setuju dengan</string>
    <string name="_62">+62</string>
    <string name="kata_sandi_harus_terdiri_atas">Kata sandi harus terdiri atas:</string>
    <string name="_1_angka_1_9">1 angka (1-9)</string>
    <string name="_1_huruf_besar_a_z">1 huruf besar (A-Z)</string>
    <string name="akun_berhasil_dibuat">Akun berhasil dibuat!</string>
    <string name="selamat_datang_di_nsetaman">Selamat Datang di\nSetaman!</string>
    <string name="aplikasi_yang_menyediakan_layanan_sewa_ntanaman">Aplikasi yang menyediakan layanan sewa\ntanaman</string>
    <string name="mulai_pakai_setaman">Mulai pakai Setaman</string>
    <string name="Username">Username</string>
    <string name="email">Email\u0020</string>
    <string name="UserId">UserId</string>
    <string name="kirim_melalui_email">Kirim melalui Email</string>
    <string name="verifikasi_email">Verifikasi Email</string>
    <string name="klik_link_yang_anda_terima_melalui">Klik link yang Anda terima melalui</string>
    <string name="bergabung_menjadi_mitra">Bergabung menjadi mitra!</string>
    <string name="buka_toko_gratis">Buka toko gratis</string>
    <string name="persewaan_saya">Persewaan saya</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="belum_ndibayar">Belum\nDibayar</string>
    <string name="dikirim">Dikirim</string>
    <string name="dalam_nperawatan">Dalam\nPerawatan</string>
    <string name="ubah_data_akun">Ubah data akun</string>
    <string name="back_button">Back Button</string>
    <string name="buka_toko">Buka Toko</string>
    <string name="bergabunglah_dengan_setaman">Bergabunglah dengan Setaman dan nikmati\n berbagai manfaat luar biasa yang akan membantu\nbisnis Anda tumbuh dan sukses</string>
    <string name="lengkapi_informasi_toko_nberikut">Lengkapi informasi toko\nberikut!</string>
    <string name="nama_toko_anda">Nama toko anda</string>
    <string name="okays">okays</string>
    <string name="lengkapi_alamat_toko_anda">Lengkapi alamat toko anda!</string>
    <string name="alamat">Alamat</string>
    <string name="alamat_toko_anda">Alamat toko anda</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="lokasi_peta">Lokasi Peta</string>
    <string name="search">Search</string>
    <string name="cari_di_sini">Cari di sini</string>
    <string name="mapbox_access_token">"pk.eyJ1IjoiZmFqYXJ3aXJhMTQwMyIsImEiOiJjbHZ4bzUwdDYyOGF2MmltaDd2ZzR5ZG4wIn0.ymznZ8GsSLH48jO5savzMg"</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="florist_surabaya">Florist Surabaya</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="masukkan_harga_sewa">Masukkan harga sewa</string>
    <string name="minimal_durasi_order">Minimal Durasi Order</string>
    <string name="jadwal_perawatan">Jadwal Perawatan</string>
    <string name="masukkan_deskripsi_produk">Masukkan deskripsi produk...</string>
    <string name="lokasi">Lokasi</string>
    <string name="transaksi">Transaksi</string>
    <string name="beranda">Beranda</string>
    <string name="profil">Profil</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="pesanan_nbaru">Pesanan \nBaru</string>

    <plurals name="error_over_count">
        <item quantity="one">You can only select one media file</item>
        <item quantity="other">You can only select up to %1$d media files</item>
    </plurals>
</resources>