<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.reset_password.ResetPasswordActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        android:textSize="24sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/masukkan_email"
        android:textColor="@color/gray_500"
        android:textSize="14sp"
        android:lineHeight="22sp"
        android:fontFamily="@font/nunitosans_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/email_nomor_hp"
                android:textColor="@color/black"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/mandatory"
                android:textColor="@color/red"
                android:textSize="12sp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:layout_marginTop="4sp"
            android:hint="@string/email_hint"
            android:textSize="14sp"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_normal_edittext"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom">
        <Button
            android:id="@+id/btnSentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingVertical="10dip"
            android:text="@string/kirim_email"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_sans_bold"
            android:textAllCaps="false"
            android:background="@drawable/rounded_gray_button"
            android:backgroundTint="@color/main_color"/>
    </LinearLayout>



</LinearLayout>