<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    tools:context=".views.splashscreen.OnboardingActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/illustration_onboarding"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/heading_sm_bold"
        android:layout_marginTop="15dp"
        android:text="@string/selamat_datang_di_nsetaman"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/body_md_regular"
        android:layout_marginTop="16dp"
        android:text="@string/aplikasi_yang_menyediakan_layanan_sewa_ntanaman"
        android:textColor="@color/gray_500"/>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        style="@style/label_lg_bold"
        android:paddingVertical="10dip"
        android:text="@string/login"
        android:textColor="@color/text_tertiary"
        android:textAllCaps="false"
        android:background="@drawable/rounded_success_button"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/label_lg_bold"
        android:paddingVertical="10dip"
        android:layout_marginBottom="16dp"
        android:text="@string/daftar"
        android:textColor="@color/text_accent"
        android:textAllCaps="false"
        android:background="@drawable/rounded_green_border_button"/>

</LinearLayout>