<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="18dp"
    android:background="@color/white"
    tools:context=".views.RegisterPhoneActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bergabung_ke_florist"
        android:textAlignment="center"
        style="@style/heading_sm_bold"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nomor HP"
                android:textColor="@color/black"
                style="@style/label_lg_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/mandatory"
                android:textColor="@color/text_error"
                android:textSize="12sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_normal_edittext"
                android:hint="@string/hint_phone_number"
                style="@style/body_md_regular"
                android:textColorHint="@color/gray_400"
                android:paddingStart="48dp"
                android:paddingVertical="14dp"
                android:paddingEnd="18dp"
                android:textColor="@color/text_primary"
                android:inputType="number"
                android:clickable="true"
                android:focusable="true"/>
            <TextView
                android:id="@+id/textViewHintPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_62"
                android:layout_alignBaseline="@id/etPhoneNumber"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                style="@style/body_md_regular"
                android:textColor="@color/text_primary"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        style="label_lg_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/selector_btn_save"
        android:text="@string/lanjut"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/text_tertiary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau_daftar_menggunakan"
            style="@style/body_md_regular"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/gray_500"/>

        <ImageView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:background="@drawable/rounded_normal_edittext"
        android:drawableLeft="@drawable/ic_google"
        android:paddingLeft="65dip"
        android:paddingRight="65dip"
        android:text="@string/daftar_menggunakan_google"
        android:textAllCaps="false"
        android:textColor="@color/text_accent"
        android:maxLines="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">
        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_regular"
                android:text="@string/saya_setuju_dengan"
                android:textColor="@color/gray_500"/>

            <TextView
                android:id="@+id/terms_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_condition"
                android:textColor="@color/olive_500"
                style="@style/body_md_bold"
                android:layout_marginStart="4dp"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_regular"
                android:text=" serta"
                android:textColor="@color/gray_500"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_below="@id/layout1">
            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_bold"
                android:text="@string/privacy_policy"
                android:textColor="@color/olive_500"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_regular"
                android:text=" yang ditetapkan oleh florist"
                android:textColor="@color/gray_500"/>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/body_md_regular"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/gray_500"/>

        <TextView
            android:id="@+id/textViewLogin"
            style="@style/body_md_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:minHeight="48dp"
            android:text="@string/masuk"
            android:gravity="center_vertical"
            android:textColor="@color/olive_500"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>