<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterSelectVerificationActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/back_button"/>

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/title_md_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/text_primary"/>
    </androidx.appcompat.widget.Toolbar>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:scaleY="0.75"
        android:progressDrawable="@drawable/greenprogress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_sm_bold"
            android:layout_marginTop="15dp"
            android:text="@string/verif_code"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/body_md_regular"
            android:layout_marginTop="10dp"
            android:text="@string/verif_code_detail"
            android:textColor="@color/gray_500"/>
        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/illustration_select_verification"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_normal_edittext"
            android:layout_marginTop="30dp"
            android:padding="25dp">
            <ImageView
                android:id="@+id/phoneLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/kirimSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_bold"
                android:text="@string/kirim_melalui_sms"
                android:layout_toEndOf="@id/phoneLogo"
                android:textColor="@color/gray_900"/>
            <TextView
                android:id="@+id/tvSMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_sm_regular"
                android:text="@string/supporting_text"
                android:layout_toEndOf="@id/phoneLogo"
                android:layout_below="@id/kirimSMS"
                android:textColor="@color/gray_900"/>
            <ImageView
                android:id="@+id/rightArrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_normal_edittext"
            android:layout_marginTop="15dp"
            android:padding="25dp">
            <ImageView
                android:id="@+id/emailLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/email_logo"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/sendEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_md_bold"
                android:text="@string/kirim_melalui_email"
                android:layout_toEndOf="@id/emailLogo"
                android:textColor="@color/gray_900"/>
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/body_sm_regular"
                android:text="@string/hint_whatsapp"
                android:layout_toEndOf="@id/emailLogo"
                android:layout_below="@id/sendEmail"
                android:textColor="@color/gray_900"/>
            <ImageView
                android:id="@+id/rightArrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right_arrow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>