<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RegisterVerificationActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:scaleY="0.75"
        android:progressDrawable="@drawable/greenprogress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">
        <TextView
            android:id="@+id/verificationMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading_sm_bold"
            android:layout_marginTop="15dp"
            android:text="@string/verif_code"
            android:textColor="@color/gray_900"/>

        <TextView
            android:id="@+id/hintVerificationMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/body_md_regular"
            android:layout_marginTop="10dp"
            android:text="@string/masukkkan_kode"
            android:textColor="@color/gray_500"/>

        <LinearLayout
            android:id="@+id/hintVerificationMethod_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body_md_regular"
                android:text="@string/sms"
                android:textColor="@color/gray_500"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body_md_regular"
                android:text="@string/di"
                android:textColor="@color/gray_500"/>
            <TextView
                android:id="@+id/tvInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body_md_bold"
                android:text="@string/hint_whatsapp"
                android:textColor="@color/olive_500"/>

        </LinearLayout>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_email_sent"
            android:layout_gravity="center"
            android:layout_marginVertical="30dp"/>

        <LinearLayout
            android:id="@+id/layoutOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <EditText
                android:id="@+id/editTxt1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:background="@drawable/rounded_number_editext"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:layout_marginEnd="16sp"/>
            <EditText
                android:id="@+id/editTxt2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:background="@drawable/rounded_number_editext"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:layout_marginEnd="16sp"/>
            <EditText
                android:id="@+id/editTxt3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:background="@drawable/rounded_number_editext"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:layout_marginEnd="16sp"/>
            <EditText
                android:id="@+id/editTxt4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:layout_marginEnd="16sp"
                android:textColor="@color/gray_900"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:background="@drawable/rounded_number_editext"/>
            <EditText
                android:id="@+id/editTxt5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:inputType="number"
                android:layout_marginEnd="16sp"
                android:maxLength="1"
                android:maxLines="1"
                android:background="@drawable/rounded_number_editext"/>
            <EditText
                android:id="@+id/editTxt6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                style="@style/title_sm_bold"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1"
                android:background="@drawable/rounded_number_editext"/>
        </LinearLayout>

        <TextView
            android:id="@+id/countDownTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_lg_bold"
            android:textAlignment="center"
            android:text="@string/countdowntimer"
            android:textSize="32sp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvResendVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/body_md_bold"
            android:textAlignment="center"
            android:text="Kirim ulang verifikasi"
            android:layout_marginTop="30dp"
            android:textColor="@color/gray_400"/>

<!--        <TextView-->
<!--            android:id="@+id/idUser"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/title_lg_bold"-->
<!--            android:textAlignment="center"-->
<!--            android:text="IdUser"-->
<!--            android:textColor="@color/black"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="35dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInputSalah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/title_sm_regular"
                android:text="@string/nomor_salah"
                android:textColor="@color/gray_500" />

            <TextView
                android:id="@+id/tvChangeInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/title_sm_bold"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/ubah"
                android:textSize="16sp"
                android:textColor="@color/olive_500" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>